(build) Reduce log noise during tests